2004-03-16  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Add ijbridge as a synonym for ijchain to trap
	messages from the Jabber - IRC bridge and tidy them up.

	* tkchat.tcl: Don't list the IRC users in the menubutton list. If
	we ever fix it such that we can /msg to IRC then this can be
	enabled but at the moment it's just noise.

2004-03-15  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Removed the now redundant code using a NETSCAPE
	environment variable. We have a dialog to set this now.

2004-03-15  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Added support for the ActiveState Tk style package
	posted by Jeff Hobbs to tcl-core. If this can be found then we
	will try and use it, subject to user control via the
	Preferences->Options dialog settings.

2004-03-12  Reinhard Max  <max@suse.de>

	* tkchat.tcl: Sort the user lists, separately for IRC and chat
	users. Put a separator between the two groups into the message
	menu.

2004-02-27  Pat Thoyts  <pat@zsplat.freeserve.co.uk>

	* tkchat.tcl: Tweaks to the unix look. Added mnemonic bindings to
	the login dialog.
	Changed the purge menu item to 'Reload history'.
	Changed the text selection background color.

2004-02-20  Pat Thoyts  <pat@zsplat.freeserve.co.uk>

	* tkchat.tcl:  Incorporated the options from the wiki gtklook page
	with a couple of changes. This produces a somewhat more modern
	look on X. Pretty similar to the 'Griffinized' look from the Tk
	revitalization project.

	* tkchat.tcl:  Added a Preferences->Options dialog with stuff to 
	set the preferred browser. This should help under unix.

2004-02-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Added Mozilla Firefox into the list of possible DDE
	accessible browsers and cleared a problem with commas over DDE.

2004-02-09  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: added a /googlefight command word. 
	Try /googlefight word1 word2.  Changed the app-tkchat package